# roamin-ambient-agent-tts

./: .aider.conf.yml  .aider.rules.md  .clinerules  .continuerc.json  .env.example  .gitignore  .pre-commit-config.yaml  .roamin_root  CLAUDE_CODE_CONTEXT.md  CONSOLIDATED_PRIORITIES.md  MASTER_CONTEXT_PACK.md  Prioritized Improvement Batch.md  README.md  _check_yaml.py  _init_push.bat  _install_llama.bat  _launch_and_monitor.ps1  _probe_sdk.mjs  _restart_roamin.ps1  _smoke_test.py  _start_control_api.vbs  _start_wake_listener.vbs  _start_wake_listener.vbs.bak.2026-03-28T15-35-18  cleanup.bat  conftest.py  kill_roamin.ps1  launch.py  mypy.ini  potential_improvements_or_integrations_for_roamins_architecture.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  restart_roamin.ps1  run_control_api.py  run_wake_listener.py  run_wake_listener.py.bak.2026-03-28T16-14-55
.claude/worktrees/clever-tesla/: README.md  _smoke_test.py  pyproject.toml  requirements.txt  run_wake_listener.py
.claude/worktrees/clever-tesla/agent/core/: model_config.json  ports.py  roamin_logging.py  screen_observer.py  tool_registry.py
.claude/worktrees/clever-tesla/agent/core/memory/: README.md  memory_manager.py
.claude/worktrees/clever-tesla/agent/core/voice/: stt.py  tts.py
.claude/worktrees/clever-tesla/tests/: test_memory_module.py
agent/: control_api.py
agents/: auto.yaml  chat.yaml  code.yaml  reasoning-agent.yaml
config/: settings.local.json
docs/: PLUGIN_DEVELOPMENT.md  SETUP.md  TROUBLESHOOTING.md  WAKE_WORD_TRAINING.md  control_panel_design.md  (+1 more)
(+320 files in other folders)
