[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "roamin-ambient-agent-tts"
version = "0.1.0"
requires-python = ">=3.12"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",           # Main development environment (Windows)
    "training/venv",   # Training environment (Linux on Windows - contains broken sympy 1.14.0)
    "*.egg-info",
    "dist",
    "build"
]
per-file-ignores = [
    # RUST_LOG must be set before any imports so Rust extensions initialize at WARN level.
    # E402 (module level import not at top of file) is intentional here.
    "run_wake_listener.py:E402",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = [
    "training/",
    "ui/",
]
