[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "roamin-ambient-agent-tts"
version = "0.1.0"
requires-python = ">=3.12"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
